# rdf-mapper

./: .gitignore  CHANGELOG.md  README.md  doc.md  hse.json  hse.ttl  mapper.py  publish-full  pyproject.toml  query.sq  requirements.txt  run
.github/workflows/: tests.yaml
doc/: doc.md  literal_resources.md  notes.md
examples/hse/: README.md  hse-sample.json  testhse.json
examples/hse/templates/: 1-as-is.yaml  2-reuse-registration.yaml  3-split-products.yaml  4-local-CVs.yaml  5-parse-crops.yaml  6-reconcile-crops.yaml  active-ingredients.yaml  crop-parser.py  hse.yaml  ingredient-parser.py  multi-resource.yaml  registrations.yaml
examples/scratch/: colour_mapping.yaml  json_example.yaml  jsondata.json  map_by_example.yaml  mini-data.csv  mini-example.yaml  row1.json  skip_missing.yaml  try_expr.yaml
lib/: mapper_spec.py  template_processor.py  template_state.py  template_support.py
src/rdf_mapper/: mapper.py
src/rdf_mapper/lib/: errors.py  function.py  mapper_spec.py  pattern.py  reconcile.py  template_processor.py  template_state.py  template_support.py
templates/: 7-reconcile-substances.yaml  property-resuse.yaml  simplemap.yaml
test/: test_function.py  test_graphs.py  test_mapper_spec.py  test_pattern.py  test_template_processor.py  test_template_support.py
test/expected/: asBoolean_producing_false.ttl  auto_cv.ttl  auto_cv_hash.ttl  default_mapping.ttl  default_mapping_no_auto_declare.ttl  embedded_literal_template.ttl  embedded_template.ttl  explicit_mapping.ttl  graphs-delete.trig  graphs-update.trig  graphs.nq  graphs.trig  guard_condition.ttl  inverse_prop.ttl  langString_quoted_value.ttl  langString_with_newline.ttl  map_by.ttl  nested_literal_resource_spec.ttl  nested_resource_spec.ttl  one_off.ttl  property_spec.ttl  property_value_list.ttl  required_filter.ttl  skip_missing.ttl  skip_missing_in_list.ttl  smap_to.ttl  split_in_fn_pipeline.ttl  split_in_url_pattern.ttl  unless_filter.ttl  unless_none_filter.ttl
test/scratch/: map_by_example.yaml  mini-data.csv  skip_missing.yaml  try_expr.yaml
test/templates/: embedded.yaml
