[build-system]
requires = ["setuptools >= 61.0", "autosemver"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.12"
dependencies = [
    "autosemver == 1.0.0",
    "setuptools",
    "pyright[nodejs]",
    "pydantic-settings",
    "dateparser == 1.2.1",
    "isodate == 0.7.2",
    "lark == 1.2.2",
    "PyYAML == 6.0.2",
    "rdflib == 7.1.3",
    "requests",
    "urllib3 == 2.3.0"
]
name = "rdf_mapper"
version = "0.2.2"
description = "Simple CSV/JSON to RDF mapper"
authors = [
    { name = "Dave Reynolds", email = "dave.reynolds@epimorphics.com" },
    { name = "Kal Ahmed", email = "kal.ahmed@epimorphics.com" },
]

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx", "sphinx-rtd-theme"]
lint = ["ruff"]
dev = ["rdf_mapper[test,docs,lint]"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["rdf_mapper*"]

[project.scripts]
mapper = "rdf_mapper.mapper:run_main"

[tool.pytest.ini_options]
addopts = ""
markers = ["slow: Marks slow tests"]

filterwarnings = [
    "ignore::DeprecationWarning:autosemver.*:",
    "ignore::DeprecationWarning:pkg_resources.*:",
]

[tool.ruff]
src = ["src", "tests"]
include = ["src/**.py"]
line-length = 128

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "A",
    "PLC",
    "PLE",
    "PLW",
    "I",
    "N816",
    "ANN001",
    "ANN201",
    "ANN202",
    "ANN205",
    "ANN206",
]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.pyright]
executionEnvironments = [{ root = "src" }]
typeCheckingMode = "basic"
venvPath = "."
venv = "venv"
